--- a/Dashboard admin/html/sinhvien.html
+++ b/Dashboard admin/html/sinhvien.html
@@ -19,7 +19,7 @@
             </td>
             <td>
                 <div id="ky-thi">
-                    <a href="../html/index.html" onclick="highlightLink(this)">KỲ THI</a>
+                    <a href="../../index.html" onclick="highlightLink(this)">KỲ THI</a>
                 </div>
             </td>
             <td>
