--- a/Dashboard admin/html/thongke.html
+++ b/Dashboard admin/html/thongke.html
@@ -19,17 +19,17 @@
             </td>
             <td>
                 <div id="ky-thi">
-                    <a href="../html/index.html" onclick="highlightLink(this)">KỲ THI</a>
+                    <a href="../../index.html" onclick="highlightLink(this)">KỲ THI</a>
                 </div>
             </td>
             <td>
                 <div id="sinh-vien">
-                    <a href="../html/sinhvien.html" onclick="highlightLink(this)">SINH VIÊN</a>
+                    <a href="sinhvien.html" onclick="highlightLink(this)">SINH VIÊN</a>
                 </div> 
             </td>
             <td>
                 <div id="thong-ke" onclick="highlightLink(this)">
-                    <a href="../html/thongke.html">THỐNG KÊ</a>
+                    <a href="thongke.html">THỐNG KÊ</a>
                 </div>
             </td>
             <td>
