--- a/Trang tạo, Chỉnh sửa kì thi/html/taomoikythi.html
+++ b/Trang tạo, Chỉnh sửa kì thi/html/taomoikythi.html
@@ -86,7 +86,7 @@
             <tbody></tbody>
         </table>
         <br />
-        <a id="them-ok" href="C:\Users\Admin\OneDrive\Tài liệu\Lap trinh web\BT nhóm web\Admin\Dashboard admin\html\index.html">Lưu đề thi</a>
+        <a id="them-ok" href="./Dashboard admin/html/index.html">Lưu đề thi</a>
     </div>
 
     <script type="text/javascript" src="../javascript/xuly.js"></script>
