--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Admin</title>
 
-    <link type="text/css" rel="stylesheet" href="../css/dinhdang1.css" />
-    <!-- <script type="text/javascript" src="../javascript/xuly1.js"></script> -->
+    <link type="text/css" rel="stylesheet" href="./Dashboard admin/css/dinhdang1.css" />
+    <!-- <script type="text/javascript" src="./Dashboard admin/javascript/xuly1.js"></script> -->
 </head>
 <body>
     <div id="header">
@@ -16,21 +16,21 @@
     <table id="chuc-nang">
         <tr>
             <td>
-                <img id="logo-truong" src="../images/download.jpg" />
+                <img id="logo-truong" src="./Dashboard admin/images/download.jpg" />
             </td>
             <td>
                 <div id="ky-thi">
-                    <a href="../html/index.html" onclick="highlightLink(this)">KỲ THI</a>
+                    <a href="index.html" onclick="highlightLink(this)">KỲ THI</a>
                 </div>
             </td>
             <td>
                 <div id="sinh-vien">
-                    <a href="../html/sinhvien.html" onclick="highlightLink(this)">SINH VIÊN</a>
+                    <a href="./Dashboard admin/html/sinhvien.html" onclick="highlightLink(this)">SINH VIÊN</a>
                 </div> 
             </td>
             <td>
                 <div id="thong-ke">
-                    <a href="../html/thongke.html" onclick="highlightLink(this)">THỐNG KÊ</a>
+                    <a href="./Dashboard admin/html/thongke.html" onclick="highlightLink(this)">THỐNG KÊ</a>
                 </div>
             </td>
             <td>
@@ -59,7 +59,7 @@
             </td>
             <td>
                 <div id="tao-moi">
-                    <a id="nut-tao-moi" href="C:\Users\Admin\OneDrive\Tài liệu\Lap trinh web\BT nhóm web\Admin\Trang tạo, Chỉnh sửa kì thi\html\taomoikythi.html">+ Tạo mới</a>
+                    <a id="nut-tao-moi" href="./Trang tạo, Chỉnh sửa kì thi/html/taomoikythi.html">+ Tạo mới</a>
                 </div>
             </td>
             <td>
@@ -90,7 +90,7 @@
         </tbody>
     </table>
 
-    <script type="text/javascript" src="../javascript/xuly1.js"></script>
+    <script type="text/javascript" src="./Dashboard admin/javascript/xuly1.js"></script>
 
 </body>
 </html>
