--- a/Dashboard admin/html/thongke.html
+++ b/Dashboard admin/html/thongke.html
@@ -54,7 +54,8 @@
 
         </tbody>
     </table>
-
+    <br />
+    <a  id="chi-tiet" href="../../Trang thống kê/thongkeketqua.html">Nhấn để xem chi tiết</a>
     <script type="text/javascript" src="../javascript/xuly3_thongke.js"></script>
 
 </body>
