--- a/Dashboard admin/html/sinhvien.html
+++ b/Dashboard admin/html/sinhvien.html
@@ -61,6 +61,9 @@
             <td>
                 <button id="nut-xoa" >Chọn hàng để xóa</button>
             </td>
+            <td>
+                <a id="chi-tiet" href="../../Trang xem kq của từng sinh viên/thongTinSinhVien.html">Nhấn để xem chi tiết</a>
+            </td>
         </tr>
     </table>
     <br />
