--- a/Trang thống kê/thongkeketqua.html
+++ b/Trang thống kê/thongkeketqua.html
@@ -13,24 +13,21 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Thống kê kết quả</title>
-    <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/styles_statstic.css">
+    <link rel="stylesheet" href="./base.css">
+    <link rel="stylesheet" href="./styles_statstic.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
 
     <!-- Header -->
-    <div class="Nav-menu" id="NavMenu">
-        <ul>
-            <li><a href="#" class="link active"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
-            <li><a href="#" class="link"><i class="fa-regular fa-note-sticky"></i> Bài thi </a></li>
-            <!--KHI MUON TEST DIEN LINK-->
-            <li><a href="#" class="link"><i class="fa-solid fa-book"></i> Ngân hàng</a></li>
-            <li><a href="#" class="link"><i class="fa-solid fa-key"></i> Đáp án</a></li>
-            <li><a href="#" class="link"><i class="fa-solid fa-user"></i> Cá nhân</a></li>
-        </ul>
+    <div id="header">
+        <div id="ten-he-thong">HỆ THỐNG THI TRẮC NGHIỆM</div>
     </div>
+        </tr>
+    </table>
+    <div id="khoang-trong"></div>
+    <br />
     <!-- End Header -->
 
     <div class="section-one">
@@ -199,8 +196,8 @@
                 datasets: [{
                     label: 'Số lượng',
                     data: summaryData.scoreDistribution,
-                    backgroundColor: 'rgba(173, 23, 28, 1)',
-                    borderColor: 'rgba(173, 23, 28, 1)',
+                    backgroundColor: 'rgb(210, 20, 20)',
+                    borderColor: 'rgb(210, 20, 20)',
                     borderWidth: 1
                 }]
             },
