--- a/Trang xem kq của từng sinh viên/thongTinSinhVien.html
+++ b/Trang xem kq của từng sinh viên/thongTinSinhVien.html
@@ -114,8 +114,8 @@
             function searchStudent() {
                 var input = document.getElementById('keywords').value;
                 var students = [
-                    { id: 'B21DCCNXXX', name: 'Nguyễn Văn A' },
-                    { id: 'B21DCCNAAA', name: 'Hoàng Thị B' },
+                    { id: 'SV0002', name: 'Hoàng Thu Hà' },
+                    { id: 'SV0001', name: 'Nguyễn Thế Quyết' },
                     { id: 'B21DCCNBBB', name: 'Lê Văn C' }
                 ];
                 var resultDiv = document.getElementById('result');
