--- a/Trang thống kê/thongkeketqua.html
+++ b/Trang thống kê/thongkeketqua.html
@@ -127,11 +127,11 @@
 
     <script>
         var examResults = [
-            { student: 'Nguyễn Thế Quyết', exam: 'Luyện tập 1', score: 8.5, status: 'Hoàn thành', time: '18/01/2024 20:35', testResult: true },
+            { student: 'Nguyễn Văn A', exam: 'Luyện tập 1', score: 8.5, status: 'Hoàn thành', time: '18/01/2024 20:35', testResult: true },
             { student: 'Trần Thị B', exam: 'Luyện tập 1', score: 7.0, status: 'Hoàn thành', time: '18/01/2024 20:27', testResult: true },
             { student: 'Phạm Văn C', exam: 'Luyện tập 1', score: null, status: 'Chưa hoàn thành', time: null, testResult: null },
             { student: 'Nguyễn Thị D', exam: 'Luyện tập 2', score: 6.0, status: 'Hoàn thành', time: '01/02/2024 18:51', testResult: true },
-            { student: 'Hoàng Thu Hà', exam: 'Giữa kỳ', score: 7.5, status: 'Hoàn thành', time: '16/02/2024 10:55', testResult: true },
+            { student: 'Lê Văn E', exam: 'Giữa kỳ', score: 7.5, status: 'Hoàn thành', time: '16/02/2024 10:55', testResult: true },
             { student: 'Hoàng Thị F', exam: 'Giữa kỳ', score: null, status: 'Chưa hoàn thành', time: null, testResult: null }
         ];
 
