--- a/Trang xem kq của từng sinh viên/ketquathi.html
+++ b/Trang xem kq của từng sinh viên/ketquathi.html
@@ -35,8 +35,8 @@
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
                     <div class="inner-inform">
                         <h2 class="inner-title">Thông tin sinh viên</h2>
-                        <div class="inner-name"><b>Họ và tên:</b> Hoàng Thu Hà</div>
-                        <div class="inner-stuID"><b>Mã sinh viên:</b> SV0002</div>
+                        <div class="inner-name"><b>Họ và tên:</b> Nguyễn Văn A</div>
+                        <div class="inner-stuID"><b>Mã sinh viên:</b> B21DCCNXXX</div>
                         <hr>
                         <h2 class="inner-title">Chi tiết</h2>
                         <div class="inner-bday"><b>Điểm:</b> 8.5/10</div>
