--- a/Trang xem kq của từng sinh viên/thongTinSinhVien.html
+++ b/Trang xem kq của từng sinh viên/thongTinSinhVien.html
@@ -46,8 +46,8 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="inner-title">Thông tin sinh viên</h2>
-                    <div class="inner-name"><b>Họ và tên:</b> Hoàng Thu Hà</div>
-                    <div class="inner-stuID"><b>Email:</b> haht@gmail.com</div>
+                    <div class="inner-name"><b>Họ và tên:</b> Nguyễn Văn A</div>
+                    <div class="inner-stuID"><b>Mã sinh viên:</b> B21DCCNXXX</div>
                 </div>
             </div>
         </div>
@@ -114,8 +114,8 @@
             function searchStudent() {
                 var input = document.getElementById('keywords').value;
                 var students = [
-                    { id: 'SV0002', name: 'Hoàng Thu Hà' },
-                    { id: 'SV0001', name: 'Nguyễn Thế Quyết' },
+                    { id: 'B21DCCNXXX', name: 'Nguyễn Văn A' },
+                    { id: 'B21DCCNAAA', name: 'Hoàng Thị B' },
                     { id: 'B21DCCNBBB', name: 'Lê Văn C' }
                 ];
                 var resultDiv = document.getElementById('result');
