--- a/Dashboard admin/html/thongke.html
+++ b/Dashboard admin/html/thongke.html
@@ -19,7 +19,7 @@
             </td>
             <td>
                 <div id="ky-thi">
-                    <a href="../../index.html" onclick="highlightLink(this)">KỲ THI</a>
+                    <a href="./kythi.html" onclick="highlightLink(this)">KỲ THI</a>
                 </div>
             </td>
             <td>
@@ -33,7 +33,7 @@
                 </div>
             </td>
             <td>
-                <a id="dang-xuat" href="#" onclick="highlightLink(this)">ĐĂNG XUẤT</a>
+                <a id="dang-xuat" href="../../index.html" onclick="highlightLink(this)">ĐĂNG XUẤT</a>
             </td>
         </tr>
     </table>
