--- a/Trang xem kq của từng sinh viên/thongTinSinhVien.html
+++ b/Trang xem kq của từng sinh viên/thongTinSinhVien.html
@@ -48,6 +48,7 @@
                     <h2 class="inner-title">Thông tin sinh viên</h2>
                     <div class="inner-name"><b>Họ và tên:</b> Nguyễn Văn A</div>
                     <div class="inner-stuID"><b>Mã sinh viên:</b> B21DCCNXXX</div>
+                    <div class="inner-bday"><b>Ngày sinh:</b> 01/01/2003</div>
                 </div>
             </div>
         </div>
